--- a/tox.ini
+++ b/tox.ini
@@ -40,6 +40,15 @@ deps =
     psycopg2>=2.9.10,<3
     djangorestframework>=3.15.2,<4
     django-ninja>=1.3.0,<2
+    requests=2.32
+    pyjwt==2.10.0
+    cryptography==44.0.2
+    requests-oauthlib==2.0.0
+    python3-openid==3.2.0
+    onelogin==3.1.6
+    fido2==1.2.0
+    xmlsec==1.3.14
+    python3-saml==1.16.0
 extras =
     mfa
     openid
